# workflow-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
specs/: echo.yml  f.yaml
specs/index/: history.json
specs/workflow/test_read_dir/: test_read_dir.yml  test_read_dir2.yml
src/: lib.rs  main.rs
src/algebra/: args.rs  configuration.rs  crawler.rs  executor.rs  file.rs  fuzzy.rs  hasher.rs  index.rs  mod.rs  parser.rs  reader.rs  writer.rs
src/domain/: args.rs  argument.rs  command.rs  error.rs  executor.rs  file.rs  index.rs  mod.rs  workflow.rs
src/extension/: args.rs  executor.rs  mod.rs  parser.rs  schema.rs  store.rs
src/internal/: args.rs  crawler.rs  executor.rs  index.rs  mod.rs  reader.rs  writer.rs
