[package]
name = "workflow"
description = "A simple workflow engine for the command line"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
crossterm = "0.27.0"
handlebars = "4.3.7"
inquire = { version = "0.6.2", features = ["editor", "console"] }
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tantivy = "0.20.2"
thiserror = "1.0.47"

[dev-dependencies]
fake = "2.8.0"
