[package]
authors = ["Samuel Gomez <samgj_18@hotmail.com>"]
name = "workflow"
description = "A simple workflow engine for the command line"
keywords = ["workflow", "cli", "command-line", "rust"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
exclude = ["/.github"]
repository = "https://github.com/samgj18/workflow-rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
crossterm = "0.27.0"
handlebars = "5.0.0"
inquire = { version = "0.6.2", features = ["editor", "console"] }
once_cell = "1.19.0"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.56"
rocksdb = { version = "0.21.0", features = ["serde1"] }
siphasher = "1.0.0"
strsim = "0.11.0"

[dev-dependencies]
fake = "2.9.2"
