[package]
authors = ["Samuel Gomez <samgj_18@hotmail.com>"]
name = "workflow"
description = "A simple workflow engine for the command line"
keywords = ["workflow", "cli", "command-line", "rust"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
exclude = ["/.github"]
repository = "https://github.com/samgj18/workflow-rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
handlebars = "5.1.0"
inquire = { version = "0.7.3", features = ["editor", "console"] }
once_cell = "1.19.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.58"
rocksdb = { version = "0.22.0", features = ["serde1"] }
siphasher = "1.0.1"
strsim = "0.11.0"

[dev-dependencies]
fake = "2.9.2"
